# gentle_pick_and_place

./: Apriltags_Notes.md  CMakeLists.txt  README.md  package.xml
config/: pcp.yaml  scene.rviz  tags.yaml  ur3e_calibration.yaml
launch/: kinect.launch  ur3e.launch
scripts/: demo.py  move_to_pose.py  pick_and_place.py  plotposveleff.py  point_2_pont.py  posveleff.txt  robot_arm_cutting.py  robot_cut.py  robot_write.py  robot_writing.py  tf_test_1.py
src/: object_cluster.cpp
